--- a/cities.html
+++ b/cities.html
@@ -27,7 +27,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
-    <li>Ottawa   (12,478,447)</li>
+    <li>Edmonton   (11,700,543)</li>
+    <li>Ottawa   (11,700,543)</li>
   </ol>
 
 </body>
